[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipam-subnet-toolkit"
version = "1.0.0"
description = "A CLI toolkit for IP Address Management (IPAM) and subnet calculations"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ipam", "subnet", "networking", "cidr", "ip-address"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]

[project.scripts]
ipam = "ipam_subnet_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipam_subnet_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 2
