[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipam-subnet-toolkit"
version = "1.0.0"
description = "Portfolio CLI for IPv4 subnet planning and IP membership checks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ipam", "subnet", "networking", "cidr", "ipv4", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: System :: Networking",
]

[project.urls]
Repository = "https://github.com/your-username/ipam-subnet-toolkit"
Issues = "https://github.com/your-username/ipam-subnet-toolkit/issues"

[project.scripts]
ipam = "ipam_subnet_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipam_subnet_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
